Structure changes and add tests for User and Patient

--- a/test/fixtures/patients.yml
+++ b/test/fixtures/patients.yml
@@ -1,7 +1,5 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
-  user: one
-
-two:
-  user: two
+leo:
+  user: leo
+  name: "Leonardo"
+  last_name: "Maralha"
+  email: "leo@gmail.com"
