--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,12 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+igor:
+  email: "igor@gmail.com"
+  encrypted_password: <%= User.new.send(:password_digest, '123') %>
+  admin: true
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the "{}" from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+leo:
+  email: "leo@gmail.com"
+  encrypted_password: <%= User.new.send(:password_digest, '456') %>
+
+milena:
+  email: "milena@gmail.com"
+  encrypted_password: <%= User.new.send(:password_digest, '789') %>
