--- a/test/fixtures/disease_patients.yml
+++ b/test/fixtures/disease_patients.yml
@@ -1,5 +1,5 @@
 leo_flu:
   disease: flu
   patient: leo
-  diagnostic_date: <%= Time.current %>
+  diagnosed_at: <%= Time.current %>
   related_symptoms: "Corisa, catarro e mal estar"
