--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,12 +1,14 @@
 igor:
   email: "igor@gmail.com"
   encrypted_password: <%= User.new.send(:password_digest, '123') %>
-  admin: true
+  classification: :admin
 
 leo:
   email: "leo@gmail.com"
   encrypted_password: <%= User.new.send(:password_digest, '456') %>
+  classification: :patient
 
 milena:
   email: "milena@gmail.com"
   encrypted_password: <%= User.new.send(:password_digest, '789') %>
+  classification: :doctor
