--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,14 +1,19 @@
 igor:
   email: "igor@gmail.com"
-  encrypted_password: <%= User.new.send(:password_digest, '123') %>
+  encrypted_password: <%= User.new.send(:password_digest, '123456') %>
   classification: :admin
 
 leo:
   email: "leo@gmail.com"
-  encrypted_password: <%= User.new.send(:password_digest, '456') %>
+  encrypted_password: <%= User.new.send(:password_digest, '123456') %>
   classification: :patient
 
 milena:
   email: "milena@gmail.com"
-  encrypted_password: <%= User.new.send(:password_digest, '789') %>
+  encrypted_password: <%= User.new.send(:password_digest, '123456') %>
   classification: :doctor
+
+pending:
+  email: "pending@gmail.com"
+  encrypted_password: <%= User.new.send(:password_digest, '123456') %>
+  classification: :patient
