--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.2.4",
+    "flowbite": "^1.6.4",
     "inputmask": "^5.0.8",
     "stimulus": "^3.2.1",
     "webpack": "^5.75.0",
