--- a/test/fixtures/active_storage/attachments.yml
+++ b/test/fixtures/active_storage/attachments.yml
@@ -1,4 +1,4 @@
 prescription_file:
   name: file
-  record: for_flu_treatment (Prescription)
+  record: for_flu (Prescription)
   blob: prescription_file_blob
